aligned text to middle and fixed header logo height

--- a/css/zerogrid-full.css
+++ b/css/zerogrid-full.css
@@ -1303,8 +1303,8 @@ i {
 }
 
 .zerogrid-full .text-section {
-	margin-left: 30px !important;
 	margin-top: 25px !important;
+	text-align:center !important;
 	font-size: 24px !important;
 }
 
