--- a/css/zerogrid.css
+++ b/css/zerogrid.css
@@ -511,7 +511,7 @@ body {
 .zerogrid .logo {
 	min-height: 50px;
 	min-width: 100px;
-	max-height: 80px;
+	max-height: 55px;
 	max-width: 250px;
 	height: 25%;
 	margin: 20px 0px -20px 10px;
